; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/lsm1/extr_lsm_tree.c_strAppendFlags.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/lsm1/extr_lsm_tree.c_strAppendFlags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @strAppendFlags to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @strAppendFlags(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [8 x i8], align 1
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = getelementptr inbounds [8 x i8], [8 x i8]* %5, i64 0, i64 0
  %8 = call i32 @lsmFlagsToString(i32 %6, i8* %7)
  %9 = getelementptr inbounds [8 x i8], [8 x i8]* %5, i64 0, i64 4
  store i8 58, i8* %9, align 1
  %10 = load i32*, i32** %3, align 8
  %11 = getelementptr inbounds [8 x i8], [8 x i8]* %5, i64 0, i64 0
  %12 = call i32 @lsmStringAppend(i32* %10, i8* %11, i32 5)
  ret void
}

declare dso_local i32 @lsmFlagsToString(i32, i8*) #1

declare dso_local i32 @lsmStringAppend(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
